# MicroScope

./: Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
micro_scope/: analyser.py  cli.py  decision.py  input.py  output.py  utils.py  visuals.py
output/: output.json
